--- a/src/scss/layouts/header.scss
+++ b/src/scss/layouts/header.scss
@@ -3,6 +3,10 @@
   justify-content: space-between;
   align-items: center;
   height: 80px;
+  position: fixed;
+  z-index: 5;
+  width: 60%;
+  background: #fff;
   &__logo{
     span{
     font-family: 'Myriad Pro Bold';
@@ -70,6 +74,7 @@
     display: none;
     box-shadow: 2px 3px 5px #c9c9c9;
     width: 200%;
+    background: #fff;
     a{
       display: flex;
       justify-content: center;
