--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -8,6 +8,94 @@ a{
   text-decoration: none;
   color: #333;
 }
+h1,h2,h3,h4,h5,h6{
+  margin: 0;
+}
 .container{
   padding: 0 20% 0 20%;
+}
+.slider{
+  &__wrap{
+    padding-top: 80px;
+    position: relative;
+  }
+  &__info{
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    h1{
+      font-size: 8vmin;
+      font-family: 'Abril Fatface Regular';
+      color: #fff;
+      letter-spacing: 0.08em;
+    }
+    button{
+      font-size: 1.7vmin;
+      font-family: 'Aleo Light';
+      text-transform: uppercase;
+      color: #fff;
+      width: 40%;
+      background: #000000;
+      padding: 20px;
+      margin-top: 45px;
+      transition: .4s;
+      &:hover{
+        background: #f1f1f1;
+        color: #333;
+        box-shadow: 2px 2px 20px #000000;
+      }
+    }
+  }
+}
+// sections//
+.section{
+  padding: 7% 20% 7% 20%;
+  display: flex;
+  justify-content: space-between;
+  h2{
+    font-family: 'Myriad Pro Regular';
+    font-size: 3.3vmin;
+    font-weight: 500;
+  }
+  h4{
+    font-family: 'Aleo Light';
+    font-weight: 600;
+    font-size: 1.6vmin;
+  }
+  &__image{
+    width: 45%;
+    position: relative;
+    img{
+      max-width: 100%;
+      height: auto;
+    }
+    h2{
+      position: absolute;
+      top: 30%;
+      text-align: center;
+      right: -5%;
+      width: 25%;
+    }
+  }
+  &__text{
+    font-family: 'Roboto Light';
+    color: #898989;
+    line-height: 1.5em;
+    font-size: 1.55vmin;
+  }
+}
+.row{
+  flex-direction: row;
+}
+.row .section__inner{
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
