--- a/src/scss/layouts/header.scss
+++ b/src/scss/layouts/header.scss
@@ -10,7 +10,7 @@
   &__logo{
     span{
     font-family: 'Myriad Pro Bold';
-    font-size: 36px;
+    font-size: 3vmin;
     text-transform: uppercase;
   }
   }
@@ -47,7 +47,7 @@
     }
   }
   &__heading{
-    font-size: 12px;
+    font-size: 1.3vmin;
     font-family: 'Aleo Light';
     text-transform: uppercase;
   }
