--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -58,15 +58,42 @@ h1,h2,h3,h4,h5,h6{
   padding: 7% 20% 7% 20%;
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   h2{
     font-family: 'Myriad Pro Regular';
     font-size: 3.3vmin;
     font-weight: 500;
   }
+  h3{
+    font-family: 'Abril Fatface Regular';
+    font-size: 3.5vmin;
+  }
   h4{
     font-family: 'Aleo Light';
     font-weight: 600;
     font-size: 1.6vmin;
+  }
+  &__inner{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__block{
+    width: 28%;
+    margin: 0 0 10% 8%;
+    display: flex;
+    align-items: flex-start;
+    &:first-child{
+      margin-left: 0;
+    }
+    &:nth-child(4){
+      margin-left: 0;
+    }
+    &:nth-child(n+3){
+      margin-bottom: 0;
+    }
+  }
+  &__asset{
+    margin-right: 5%;
   }
   &__image{
     width: 45%;
@@ -79,8 +106,7 @@ h1,h2,h3,h4,h5,h6{
       position: absolute;
       top: 30%;
       text-align: center;
-      right: -5%;
-      width: 25%;
+      right: -20px;
     }
   }
   &__text{
@@ -89,13 +115,4 @@ h1,h2,h3,h4,h5,h6{
     line-height: 1.5em;
     font-size: 1.55vmin;
   }
-}
-.row{
-  flex-direction: row;
-}
-.row .section__inner{
-  width: 35%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
