--- a/src/scss/layouts/footer.scss
+++ b/src/scss/layouts/footer.scss
@@ -29,6 +29,13 @@
     font-size: 1.3vmin;
     font-family: 'Aleo Light';
     text-transform: uppercase;
+    transition: .4s;
+    &:hover{
+      border: 1px solid #000000;
+      background: #000000;
+      box-shadow: 2px 2px 10px #c9c9c9;
+      color: #fff;
+    }
   }
   &__logo{
     font-family: 'Myriad Pro Bold';
