--- a/src/scss/configs/section-config.scss
+++ b/src/scss/configs/section-config.scss
@@ -1,11 +1,17 @@
 .row{
   flex-direction: row;
+  @media(max-width: 425px){
+  flex-direction: column;
+  }
 }
 .row .section__inner{
   width: 35%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  @media(max-width: 425px){
+  width: 100%;
+  }
 }
 .row .section__block{
   flex-direction: column;
@@ -24,9 +30,15 @@
 .full, .last{
   flex-direction: row;
   padding: 0;
+  @media(max-width: 425px){
+  flex-direction: column;
+  }
 }
 .last .section__image{
   width: 55%;
+  @media(max-width: 425px){
+  width: 100%;
+  }
 }
 .last .section__inner{
   width: 20%;
@@ -35,6 +47,10 @@
   justify-content: space-between;
   align-items: center;
   text-align: center;
+  @media(max-width: 425px){
+  width: 90%;
+  padding: 8% 5% 8% 5%;
+  }
   button{
     font-size: 1.7vmin;
     font-family: 'Aleo Light';
@@ -44,6 +60,9 @@
     background: #000000;
     padding: 20px;
     transition: .4s;
+    @media(max-width: 425px){
+    font-size: 3.7vmin;
+    }
     &:hover{
       background: #f1f1f1;
       color: #333;
@@ -54,12 +73,18 @@
 
 .full .section__image{
   width: 33%;
+  @media(max-width: 425px){
+  width: 100%;
+  }
 }
 .full .section__inner{
   width: 26%;
   text-align: center;
   flex-direction: column;
   padding: 4% 4% 0 4%;
+  @media(max-width: 425px){
+  width: 92%;
+  }
 }
 .slides{
   text-align: center;
