--- a/src/scss/layouts/footer.scss
+++ b/src/scss/layouts/footer.scss
@@ -7,6 +7,7 @@
     border-bottom: 1px solid #D9D9D9;
     @media(max-width: 425px){
     padding: 2% 5% 2% 5%;
+    flex-direction: column;
     }
   }
   &__end{
@@ -15,18 +16,25 @@
     align-items: center;
     padding: 2% 20% 2% 20%;
     @media(max-width: 425px){
-    padding: 2% 5% 2% 5%;
+    padding: 5%;
     }
   }
   &__nav{
     width: 20%;
     display: flex;
     justify-content: space-between;
+    @media(max-width: 425px){
+    width: 90%;
+    margin-top: 10%;
+    }
   }
   &__link{
     font-size: 1.3vmin;
     font-family: 'Aleo Light';
     text-transform: uppercase;
+    @media(max-width: 425px){
+    font-size: 4.3vmin;
+    }
   }
   &__button{
     width: 15%;
@@ -36,6 +44,12 @@
     font-family: 'Aleo Light';
     text-transform: uppercase;
     transition: .4s;
+    @media(max-width: 425px){
+    width: 70%;
+    padding: 5%;
+    margin: 10% 0 10% 0;
+    font-size: 3.7vmin;
+    }
     &:hover{
       border: 1px solid #000000;
       background: #000000;
@@ -47,16 +61,25 @@
     font-family: 'Myriad Pro Bold';
     font-size: 3vmin;
     text-transform: uppercase;
+    @media(max-width: 425px){
+    font-size: 7vmin;
+    }
   }
   &__info{
     width: 25%;
     display: flex;
     justify-content: space-between;
+    @media(max-width: 425px){
+    width: 50%;
+    }
     a{
       font-family: 'Roboto Light';
       color: #898989;
       line-height: 1.5em;
       font-size: 1.55vmin;
+      @media(max-width: 425px){
+      font-size: 2.55vmin;
+      }
     }
   }
 }
