--- a/src/scss/libs/navigation.scss
+++ b/src/scss/libs/navigation.scss
@@ -9,6 +9,9 @@
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
   z-index: 1;
+  @media(max-width: 425px){
+  top: 50%;
+  }
   li {
     display: flex;
     flex-direction: column;
