--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -18,7 +18,7 @@ h1,h2,h3,h4,h5,h6{
   &__wrap{
     padding-top: 80px;
     position: relative;
-    @media(max-width: 425px){
+    @media(max-width: 1024px){
       padding-top: 40px;
     }
   }
@@ -37,7 +37,7 @@ h1,h2,h3,h4,h5,h6{
       font-family: 'Abril Fatface Regular';
       color: #fff;
       letter-spacing: 0.08em;
-      @media(max-width: 425px){
+      @media(max-width: 1024px){
       font-size: 5vmin;
       }
     }
@@ -51,7 +51,7 @@ h1,h2,h3,h4,h5,h6{
       padding: 20px;
       margin-top: 45px;
       transition: .4s;
-      @media(max-width: 425px){
+      @media(max-width: 1024px){
       width: 55%;
       margin-top: 20px;
       padding: 5px;
@@ -70,7 +70,7 @@ h1,h2,h3,h4,h5,h6{
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  @media(max-width: 425px){
+  @media(max-width: 1024px){
   padding: 5%;
   }
   h2{
@@ -152,12 +152,17 @@ h1,h2,h3,h4,h5,h6{
   &__image{
     width: 45%;
     position: relative;
+
     @media(max-width: 425px){
       width: 100%;
     }
     img{
       max-width: 100%;
       height: auto;
+      @media(min-width: 426px) and (max-width: 1024px){
+        position: absolute;
+        top: -50%;
+      }
     }
     h2{
       position: absolute;
